@@ -1,40 +1,36 @@
 package com.example.backend1.controller;
 
 import com.example.backend1.model.*;
-import com.example.backend1.repository.EventRepository;
-import com.example.backend1.repository.OrganisateurRepository;
-import com.example.backend1.repository.UserRepository;
-import com.example.backend1.repository.ParticipantRepository;
+import com.example.backend1.repository.*;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
-import java.util.List;
-import java.util.Map;
-import java.util.HashMap;
+
+import java.util.*;
 import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/admin")
 @CrossOrigin(origins = "http://localhost:4200")
+@PreAuthorize("hasRole('ROLE_ADMIN')")
 public class AdminController {
+
     private final ParticipantRepository participantRepository;
     private final EventRepository eventRepository;
     private final UserRepository userRepository;
     private final OrganisateurRepository organisateurRepository;
-    private final PasswordEncoder passwordEncoder;
     private final EmailService emailService;
 
     public AdminController(ParticipantRepository participantRepository,
-                           EventRepository eventRepository, UserRepository userRepository,
-                           OrganisateurRepository organisateurRepository, PasswordEncoder passwordEncoder,
+                           EventRepository eventRepository,
+                           UserRepository userRepository,
+                           OrganisateurRepository organisateurRepository,
                            EmailService emailService) {
-        this.eventRepository = eventRepository;
         this.participantRepository = participantRepository;
+        this.eventRepository = eventRepository;
         this.userRepository = userRepository;
         this.organisateurRepository = organisateurRepository;
-        this.passwordEncoder = passwordEncoder;
         this.emailService = emailService;
     }
 
@@ -46,10 +42,10 @@ public class AdminController {
     @DeleteMapping("/users/{id}")
     @Transactional
     public ResponseEntity<?> deleteUser(@PathVariable Long id) {
-        return userRepository.findById(String.valueOf(id)).map(user -> {
+        return userRepository.findById(id).map(user -> {
             participantRepository.deleteByEmail(user.getEmail());
-            userRepository.deleteById(String.valueOf(id));
-            return ResponseEntity.ok("Utilisateur et ses participations supprimés");
+            userRepository.delete(user);
+            return ResponseEntity.ok("Utilisateur supprimé");
         }).orElse(ResponseEntity.notFound().build());
     }
 
@@ -62,40 +58,37 @@ public class AdminController {
     @Transactional
     public ResponseEntity<?> deleteOrganisateur(@PathVariable Long id) {
         return organisateurRepository.findById(id).map(org -> {
-            participantRepository.deleteByEmail(org.getEmail());
-            List<Event> orgEvents = eventRepository.findByOrganisateurEmail(org.getEmail());
-            for (Event event : orgEvents) {
-                participantRepository.deleteByEventId(event.getId());
-            }
-            eventRepository.deleteAll(orgEvents);
-            organisateurRepository.deleteById(id);
+            List<Event> events = eventRepository.findByOrganisateur(org);
+            events.forEach(event -> participantRepository.deleteByEvent(event));
+            eventRepository.deleteAll(events);
+            organisateurRepository.delete(org);
             return ResponseEntity.ok(Map.of(
-                    "message", "Organisateur et toutes ses données supprimés",
-                    "eventsDeleted", orgEvents.size()
-            ));
+                    "message", "Organisateur supprimé",
+                    "eventsDeleted", events.size()));
         }).orElse(ResponseEntity.notFound().build());
     }
 
     @GetMapping("/user/{id}/participations")
     public ResponseEntity<?> getUserParticipations(@PathVariable Long id) {
-        User user = userRepository.findById(String.valueOf(id)).orElse(null);
-        if (user == null) return ResponseEntity.notFound().build();
-        List<Participant> participations = participantRepository.findByEmail(user.getEmail());
-        List<Long> eventIds = participations.stream().map(Participant::getEventId).toList();
-        List<Event> events = eventRepository.findAllById(eventIds);
-        return ResponseEntity.ok(events);
+        return userRepository.findById(id).map(user -> {
+            List<Event> events = participantRepository.findByUser(user).stream()
+                    .map(Participant::getEvent)
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+            return ResponseEntity.ok(events);
+        }).orElse(ResponseEntity.notFound().build());
     }
 
     @GetMapping("/organisateur/{id}/events")
     public ResponseEntity<?> getOrganisateurEvents(@PathVariable Long id) {
         return organisateurRepository.findById(id)
-                .map(org -> ResponseEntity.ok(eventRepository.findByOrganisateurEmail(org.getEmail())))
+                .map(org -> ResponseEntity.ok(eventRepository.findByOrganisateur(org)))
                 .orElse(ResponseEntity.notFound().build());
     }
 
     @PutMapping("/users/{id}")
     public ResponseEntity<?> updateUser(@PathVariable Long id, @RequestBody User updated) {
-        return userRepository.findById(String.valueOf(id)).map(user -> {
+        return userRepository.findById(id).map(user -> {
             user.setNom(updated.getNom());
             user.setPrenom(updated.getPrenom());
             user.setEmail(updated.getEmail());
@@ -104,7 +97,8 @@ public class AdminController {
     }
 
     @PutMapping("/organisateurs/{id}")
-    public ResponseEntity<?> updateOrganisateur(@PathVariable Long id, @RequestBody Organisateur updated) {
+    public ResponseEntity<?> updateOrganisateur(@PathVariable Long id,
+                                                @RequestBody Organisateur updated) {
         return organisateurRepository.findById(id).map(org -> {
             org.setNom(updated.getNom());
             org.setPrenom(updated.getPrenom());
@@ -116,25 +110,24 @@ public class AdminController {
 
     @GetMapping("/events/all")
     public List<Map<String, Object>> getAllEventsAdmin() {
-        List<Event> events = eventRepository.findAll();
-        return events.stream().map(event -> {
-            int participantCount = participantRepository.countByEventIdAndVerifiedTrue(event.getId());
-            Map<String, Object> eventData = new HashMap<>();
-            eventData.put("id", event.getId());
-            eventData.put("title", event.getTitle());
-            eventData.put("description", event.getDescription());
-            eventData.put("date", event.getDate());
-            eventData.put("time", event.getTime());
-            eventData.put("location", event.getLocation());
-            eventData.put("imageUrl", event.getImageUrl());
-            eventData.put("category", event.getCategory());
-            eventData.put("organisateurEmail", event.getOrganisateurEmail());
-            eventData.put("maxParticipants", event.getMaxParticipants());
-            eventData.put("participantCount", participantCount);
-            eventData.put("approved", event.isApproved());
-            boolean isFull = event.getMaxParticipants() != null && participantCount >= event.getMaxParticipants();
-            eventData.put("isFull", isFull);
-            return eventData;
+        return eventRepository.findAll().stream().map(event -> {
+            int count = participantRepository.countByEventAndVerifiedTrue(event);
+            boolean isFull = event.getMaxParticipants() != null && count >= event.getMaxParticipants();
+            Map<String, Object> map = new LinkedHashMap<>();
+            map.put("id", event.getId());
+            map.put("title", event.getTitle());
+            map.put("description", event.getDescription());
+            map.put("date", event.getDate());
+            map.put("time", event.getTime());
+            map.put("location", event.getLocation());
+            map.put("imageUrl", event.getImageUrl());
+            map.put("category", event.getCategory());
+            map.put("organisateurEmail", event.getOrganisateurEmail());
+            map.put("maxParticipants", event.getMaxParticipants());
+            map.put("participantCount", count);
+            map.put("approved", event.isApproved());
+            map.put("isFull", isFull);
+            return map;
         }).collect(Collectors.toList());
     }
 
@@ -143,11 +136,7 @@ public class AdminController {
         return eventRepository.findById(id).map(event -> {
             event.setApproved(true);
             eventRepository.save(event);
-            emailService.sendEventApprovedEmail(
-                    event.getOrganisateurEmail(),
-                    event.getTitle()
-            );
-
+            emailService.sendEventApprovedEmail(event.getOrganisateurEmail(), event.getTitle());
             return ResponseEntity.ok(Map.of("approved", true));
         }).orElse(ResponseEntity.notFound().build());
     }
@@ -157,47 +146,35 @@ public class AdminController {
         return organisateurRepository.findById(id).map(org -> {
             org.setAdminVerified(!org.isAdminVerified());
             organisateurRepository.save(org);
-
-            if (org.isAdminVerified()) {
-                emailService.sendOrganisateurVerifiedEmail(org.getEmail());
-            }
-
+            if (org.isAdminVerified()) emailService.sendOrganisateurVerifiedEmail(org.getEmail());
             return ResponseEntity.ok(Map.of("adminVerified", org.isAdminVerified()));
         }).orElse(ResponseEntity.notFound().build());
     }
 
     @GetMapping("/stats")
     public ResponseEntity<?> getStats() {
-        long totalUsers = userRepository.count();
-        long totalEvents = eventRepository.count();
-        long totalParticipants = participantRepository.count();
-        long verifiedParticipants = participantRepository.countByVerified(true);
-        long pendingEvents = eventRepository.findByApprovedFalse().size();
-
         return ResponseEntity.ok(Map.of(
-                "totalUsers", totalUsers,
-                "totalEvents", totalEvents,
-                "totalParticipants", totalParticipants,
-                "verifiedParticipants", verifiedParticipants,
-                "pendingEvents", pendingEvents
+                "totalUsers", userRepository.count(),
+                "totalEvents", eventRepository.count(),
+                "totalParticipants", participantRepository.count(),
+                "verifiedParticipants", participantRepository.countByVerified(true),
+                "pendingEvents", eventRepository.findByApprovedFalse().size()
         ));
     }
 
     @DeleteMapping("/{id}")
     @Transactional
     public ResponseEntity<?> adminDeleteEvent(@PathVariable Long id) {
-        if (!eventRepository.existsById(id)) return ResponseEntity.notFound().build();
-        participantRepository.deleteByEventId(id);
-        eventRepository.deleteById(id);
-        return ResponseEntity.ok("Event deleted");
+        return eventRepository.findById(id).map(event -> {
+            participantRepository.deleteByEvent(event);
+            eventRepository.delete(event);
+            return ResponseEntity.ok("Event deleted");
+        }).orElse(ResponseEntity.notFound().build());
     }
 
     @PutMapping("/update-event/{id}")
-    @PreAuthorize("hasRole('ROLE_ADMIN')")
-    public ResponseEntity<?> adminUpdateEvent(
-            @PathVariable Long id,
-            @RequestBody EventRequest request) {
-
+    public ResponseEntity<?> adminUpdateEvent(@PathVariable Long id,
+                                              @RequestBody EventRequest request) {
         return eventRepository.findById(id).map(event -> {
             event.setTitle(request.getTitle());
             event.setDescription(request.getDescription());
@@ -208,17 +185,13 @@ public class AdminController {
             event.setImageUrl(request.getImageUrl());
             event.setMaxParticipants(request.getMaxParticipants());
             event.setProgram(request.getProgram());
-            eventRepository.save(event);
-            return ResponseEntity.ok(Map.of("message", "Event updated by admin"));
+            return ResponseEntity.ok(Map.of("message", "Event updated"));
         }).orElse(ResponseEntity.notFound().build());
     }
 
-
     @GetMapping("/organisateurs/deactivation-requests")
     public ResponseEntity<?> getDeactivationRequests() {
-        List<Organisateur> pending = organisateurRepository
-                .findByDeactivationRequestedTrue();
-        return ResponseEntity.ok(pending);
+        return ResponseEntity.ok(organisateurRepository.findByDeactivationRequestedTrue());
     }
 
     @PutMapping("/organisateurs/{id}/deactivate/approve")
@@ -228,9 +201,7 @@ public class AdminController {
             org.setActive(false);
             org.setDeactivationRequested(false);
             organisateurRepository.save(org);
-            participantRepository.deleteByEmail(org.getEmail());
             emailService.sendDeactivationConfirmedEmail(org.getEmail(), "fr");
-
             return ResponseEntity.ok(Map.of("message", "Compte désactivé."));
         }).orElse(ResponseEntity.notFound().build());
     }
